infra/k8s/webui-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-lb
  namespace: azuredocs-app
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: webui
