infra/k8s/webui.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
  namespace: azuredocs-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: webui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
  namespace: azuredocs-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webui
  template:
    metadata:
      labels:
        app: webui
        azure.workload.identity/use: "true"
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8000"
        prometheus.io/path: "/metrics"
    spec:
      serviceAccountName: sc-account-fefa7dd8-f9d3-4524-8a35-c1123a838df0
      containers:
        - name: webui
          image: seanmckdemo.azurecr.io/webui:0.0.57
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
          volumeMounts:
          - name: secrets-store
            mountPath: "/mnt/secrets-store"
            readOnly: true
      volumes:
      - name: secrets-store
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "azuredocs-secrets"
